--- a/war/BrightEdu.css
+++ b/war/BrightEdu.css
@@ -32,3 +32,13 @@ h1 {
 #closeButton {
   margin: 15px 6px 6px;
 }
+
+.linkable {
+  color: blue;
+  font-size:11px;
+  font-family:Arial, Helvetica, sans-serif;
+  text-decoration:underline;
+  cursor: pointer;
+  font-style: italic;
+}
+
