--- a/war/BrightEdu.css
+++ b/war/BrightEdu.css
@@ -42,3 +42,11 @@ h1 {
   font-style: italic;
 }
 
+.interactImageHover {
+    font-family:Verdana,Bitstream Vera Sans,sans-serif;
+    font-size:11px;
+    border:1px solid #808080;
+    padding:5px;
+    background-color:#b8d0ff;
+    color:black;
+}
