--- a/war/BrightEdu.css
+++ b/war/BrightEdu.css
@@ -1,52 +1,71 @@
 /** Add css rules here for your application. */
-
-
 /** Example rules used by the template application (remove for your app) */
 h1 {
-  font-size: 2em;
-  font-weight: bold;
-  color: #777777;
-  margin: 40px 0px 70px;
-  text-align: center;
+	font-size: 2em;
+	font-weight: bold;
+	color: #777777;
+	margin: 40px 0px 70px;
+	text-align: center;
 }
 
 .sendButton {
-  display: block;
-  font-size: 16pt;
+	display: block;
+	font-size: 16pt;
 }
 
 /** Most GWT widgets already have a style name defined */
 .gwt-DialogBox {
-  width: 400px;
+	width: 400px;
 }
 
 .dialogVPanel {
-  margin: 5px;
+	margin: 5px;
 }
 
 .serverResponseLabelError {
-  color: red;
+	color: red;
 }
 
 /** Set ids using widget.getElement().setId("idOfElement") */
 #closeButton {
-  margin: 15px 6px 6px;
+	margin: 15px 6px 6px;
 }
 
 .linkable {
-  color: blue;
-  font-size:11px;
-  font-family:Arial, Helvetica, sans-serif;
-  text-decoration:underline;
-  cursor: pointer;
-  font-style: italic;
+	color: blue;
+	font-size: 11px;
+	font-family: Arial, Helvetica, sans-serif;
+	text-decoration: underline;
+	cursor: pointer;
+	font-style: italic;
 }
 
 .interactImageHover {
-    font-family:Verdana,Bitstream Vera Sans,sans-serif;
-    font-size:11px;
-    border:1px solid #808080;
-    padding:5px;
-    background-color:#b8d0ff;
-    color:black;
+	font-family: Verdana, Bitstream Vera Sans, sans-serif;
+	font-size: 11px;
+	border: 1px solid #808080;
+	padding: 5px;
+	background-color: #b8d0ff;
+	color: black;
+}
+
+.billboard {
+	font-size: 13px;
+	font-weight: bold;
+	color: #A0A0DD;
+	margin:5px;
+	padding: 5px;
+	text-align: left;
+	border: #369 2px solid orange;
+	background-color: #F4F4F4;
+}
+
+.test {
+	background-color: #a8d0ff;
+	color: black;
+}
+
+.test2 {
+	background-color: #08dEf0;
+	color: black;
 }
