git-svn-id: svn://jmedu.wassecurity.net/BrightEdu/trunk@541 9987ea41-4527-47ae-bde9-3645be3cca0f

--- a/war/BrightEdu.css
+++ b/war/BrightEdu.css
@@ -82,3 +82,10 @@ h1 {
 	background-color: #08dEf0;
 	color: black;
 }
+
+.upld-button {
+	font-size: 10px;
+	cursor: pointer;
+	font-style: bold;
+	margin:1px;
+}
